--- a/fortnite.html
+++ b/fortnite.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(120deg, #02001c, #3a4a89, #1e2a47);
+            background: linear-gradient(45deg, #4b0082, #8a2be2, #4b0082);
             background-size: 300% 300%;
             animation: backgroundMove 10s ease infinite;
             color: white;
@@ -82,7 +82,7 @@
 
         .selected-character {
             flex: 1;
-            background: linear-gradient(45deg, #1e2a47, #3a4a89);
+            background: linear-gradient(45deg, #4b0082, #8a2be2, #4b0082);
             padding: 20px;
             display: flex;
             flex-direction: column;
