--- a/Entertainment.html
+++ b/Entertainment.html
@@ -4249,7 +4249,7 @@
                         <li><a href="homee.html"><i class="fas fa-home"></i> Home</a></li>
                         <li class="cursor-scale"><a href="anime.html">Anime</a></li>
                         <li class="cursor-scale"><a href="Animals.html">Animals</a></li>
-                        <li class="cursor-scale"><a href="fort.html">Fortnite</a></li>
+                        <li class="cursor-scale"><a href="fortnite.html">Fortnite</a></li>
                         <li class="cursor-scale"><a href="sun.html">The Sun</a></li>
                         <li class="cursor-scale"><a href="tr.html">The Train</a></li>
                         <li class="cursor-scale"><a href="relax.html">Rain</a></li>
